--- a/evaluacion-parcial.Rmd
+++ b/evaluacion-parcial.Rmd
@@ -127,38 +127,43 @@ jueces (también, franceses y estadounidenses) diferentes. El objetivo de este
 ejercicio es modelar el `score`, la calificación subjetiva que cada juez asigna
 a cada vino. Recomiendo centrarlo para el ajuste de los modelos.
 
+
+### Lectura de los datos
 ```{r}
-## Lectura de los datos
 data_vinos <- read.table("vinos.txt", sep=";", header=TRUE)
 data_vinos
 ```
 
+
+
+
+
+### Exploración inicial de los datos
 ```{r}
-## Explorando predictores
+#### Explorando predictores
 unique(data_vinos$judge)
 unique(data_vinos$wine)
 unique(data_vinos$flight)
 unique(data_vinos$wine.amer)
 unique(data_vinos$judge.amer)
-```
 
-```{r}
-## Explorando la distribución de scores
+#### Explorando la distribución de scores
 data_vinos %>% 
     ggplot(
         aes(score)
     ) + geom_boxplot()
 ```
-```{r}
-data_vinos
-```
 
+
+
+
+
+### Evaluación del comportamiento de los datos
 ```{r}
 ## Exploración de calificaciones según el tipo de vino
 data_vinos %>% 
   group_by(flight) %>% 
-  summarise(
-    mean(wine.amer), 
+  summarise( 
     mean(score), 
     n(), 
     max(score), 
@@ -169,7 +174,9 @@ t.test(
   filter(data_vinos, flight == "red")$score, filter(data_vinos, flight != "red")$score
 )
 ```
-Aquí podemos observar que no hay una diferencia relevante en las calificaciones según el tipo de vino (rojo o blanco).
+**Aquí podemos observar que no hay una diferencia relevante en las calificaciones según el tipo de vino (rojo o blanco).**
+
+
 
 ```{r}
 ## Exploración de las calificaciones por el origen del vino
@@ -181,14 +188,78 @@ data_vinos %>%
     min(score),
     max(score)
   )
+
+t.test(filter(data_vinos, wine.amer == 0)$score, filter(data_vinos, wine.amer == 1)$score)
 ```
-Aquí vemos que tampoco hay una diferencia muy grande en las calificaciones según el origen del vino.
+**Aquí vemos que tampoco hay una diferencia muy grande en las calificaciones según el origen del vino.**
+
+
 
 ```{r}
-
+## Evaluar si hay alguna diferencia importante entre los vinos según origen y tipo
+data_vinos %>% 
+  group_by(wine.amer, flight) %>% 
+  summarise(
+    n(),
+    mean(score),
+    min(score),
+    max(score)
+  )
 ```
 
 
+
+```{r}
+## Evaluando diferencias en vinos rojos dependiendo de su origen.
+amer_red <- filter(data_vinos, wine.amer == 1, flight == "red")$score
+nonamer_red <- filter(data_vinos, wine.amer == 0, flight == "red")$score
+
+hist(amer_red, col="red")
+hist(nonamer_red, col="green", add=T)
+
+t.test(amer_red, nonamer_red)
+```
+**El resultado de la prueba Welch indica que sí hay una diferencia estadísticamente significativa (asumiendo un valor-p límite de 0.05) en el score de los vinos rojos dependiendo de su origen.**
+
+
+
+```{r}
+## Evaluando diferencias en vinos blancos dependiendo de su origen.
+amer_white <- filter(data_vinos, wine.amer == 1, flight == "white")$score
+nonamer_white <- filter(data_vinos, wine.amer == 0, flight == "white")$score
+
+hist(amer_white, col="red")
+hist(nonamer_white, col="green", add=T)
+
+t.test(amer_white, nonamer_white)
+```
+**Aquí obsservamos que no hay una diferencia estadísticamente significativa en los vinos blancos dependiendo de su origen.**
+
+
+
+```{r}
+## Diferencia en las calificaciones según el origen del juez
+data_vinos %>% 
+  group_by(judge.amer) %>% 
+  summarise(
+    n(),
+    mean(score),
+    min(score),
+    max(score)
+  )
+
+amer_judge <- filter(data_vinos, judge.amer == 1)$score
+nonamer_judge <- filter(data_vinos, judge.amer == 0)$score
+
+t.test(amer_judge, nonamer_judge)
+```
+**Estos resultados nos sugieren que no hay una diferencia importante entre los scores de jueces americanos y no americanos.**
+
+
+
+```{r}
+data_vinos
+```
 
 a) En este inciso, sólo considera la variación entre jueces y
 vinos. Ajusta un modelo de regresión lineal utilizando estos predictores.
