--- a/evaluacion-parcial.Rmd
+++ b/evaluacion-parcial.Rmd
@@ -120,15 +120,15 @@ summary(fit_1a)
 ```
 
 
-Ahora utilizaremos la función posterior_predict() para calcular las predicciones de altura con base en los pesos de los 5 individuos bajo nuestro modelo de regresión ya que considera la incertidumbre asociada al error observacional (epsilon) incorporando sigma o el error aditivo.
+Ahora utilizaremos la función posterior_predict() para calcular las predicciones de altura con base en los pesos de los 5 individuos bajo nuestro modelo de regresión ya que considera la incertidumbre asociada a los coeficientes del modelo y al error observacional (epsilon) incorporando sigma o el error aditivo.
 
 ```{r}
-post_predict_1a<-as_tibble(posterior_predict(fit_1a, newdata=new,seed=SEED)) %>% 
+post_predict_1a<-as_tibble(posterior_predict(fit_1a, newdata=pesos,seed=SEED)) %>% 
   #cada fila es una simulación bajo una muestra distinta
   mutate(sample_id = 1:4000) %>% #creamos ID para cada
   pivot_longer(cols = 1:5) %>%
-  mutate(individuo = fct_inorder(name)) %>% 
-  group_by(individuo) %>% #es la predicción de cada individuo (1-5)
+  mutate(name = fct_inorder(name)) %>% 
+  group_by(name) %>% #name la predicción de cada individuo (1-5)
   summarise(altura_mean=mean(value), 
             altura_median=median(value),
             altura_low=quantile(value,.055), #intervalos del 89% de probabilidad
@@ -136,42 +136,52 @@ post_predict_1a<-as_tibble(posterior_predict(fit_1a, newdata=new,seed=SEED)) %>%
 
 post_predict_1a<-post_predict_1a %>%
   mutate(pesos)
-post_predict_1a
+
+post_predict_1a %>% mutate_if(is.numeric, ~round(., 1))
 ```
 
 ```{r}
 g_1a<-post_predict_1a %>%
   ggplot(aes(peso,altura_mean)) +
   geom_ribbon(aes(ymin=altura_low,ymax=altura_hi),alpha=.3)+
-  geom_line(color="red") + sin_lineas +
-  geom_jitter(data=howell %>% filter(peso>40),
+  geom_line(color="red") + #sin_lineas +
+  geom_jitter(data=howell %>% filter(peso>30),
               aes(peso,altura),
               height = 0, width = 0.01, colour="black")
 g_1a
 ```
 
+Son las predicciones de la distribución posterior considerando únicamente a partir de la variación de los coeficientes alrededor de la media
 
-```{r }
-y_linpred <- posterior_linpred(fit_1a, newdata=new,seed=SEED) 
-#predice únicamente a partir de la variación alrededor de la media
-#son las predicciones de la distribución posterior incorporando el nivel de incertidumbre asociado al error de medición
-#incertidumbre asociada a los coeficientes únicamente
-#tenemos nuestra nueva variable, se multiplica por los coeficientes
-summary(y_linpred)
+```{r}
+post_linpredt_1a <- as_tibble(posterior_linpred(fit_1a, newdata = pesos, seed=SEED)) %>% 
+  mutate(sample_id = 1:4000) %>% 
+  pivot_longer(cols = 1:5) %>% 
+  mutate(name = fct_inorder(name)) %>% 
+  group_by(name) %>% 
+  summarise(altura_mean = mean(value),
+            altura_median = median(value), 
+            altura_low = quantile(value, .055), 
+            altura_hi = quantile(value, .945))  
+post_linpredt_1a
 ```
-
 
 b) Ajusta un modelo lineal para personas menores de 18 años de edad utilizando
 como predictores la `edad` y el `peso`. Interpreta los coeficientes que resultan
 del modelo. Si consideras necesario centra los valores de las variables
 predictoras.
 
+Primero filtramos la muestra con las personas menores a 18 años
+
 ```{r}
 menores_edad<-datos1 %>% filter(edad < 18)
 menores_edad$genero<-factor(menores_edad$genero) #Convertimos la variable a factor
-head(menores_edad)
+summary(menores_edad)
 ```
-Para poder dar una interpretación más sencilla al modelo lineal para predecir la altura, centramos las variables alrededor de su media:
+
+Calculamos un resumen con estadísticas de dispersión, en este caso la mediana de la edad es de sólo 7 años y la muestra se reduce a 192 observaciones: 92 varones y 100 mujeres. La altura promedio de los datos ahora es de sólo 108 centímetros o 1.08 metros.
+
+Posteriormente, centramos las variables alrededor de su media para poder dar una interpretación más sencilla al modelo lineal para predecir la altura:
 
 ```{r, eval = FALSE}
 menores_edad<-menores_edad %>% 
@@ -192,7 +202,7 @@ Obtenemos un resumen del modelo:
 summary(fit_1b)
 ```
 
-De los resultados anteriores, vemos que el intercepto representa la altura promedio de los menores de 18 años para una persona con un peso y edad alrededor del promedio la cual corresponde a 108 cm o 1.08 metros. Por otro lado, el peso y edad centrada tienen un coeficiente positivo en el modelo, lo cual indica para ambos predictores un incremento sobre el valor promedio centrado del contribuye a un incremento en la predicción de la altura. En el caso del peso.centrado, dicho incremento aumenta 1.4 cm la altura y la edad, tiene una mayor aportación al pronóstico sumando 2.3cm adicionales.
+De los resultados anteriores, vemos que el intercepto representa la altura promedio de los menores de 18 años para una persona con un peso y edad alrededor del promedio la cual corresponde a 108 cm o 1.08 metros como vimos al inicio. Por otro lado, el peso y edad centrada tienen un coeficiente positivo en el modelo, lo cual indica para ambos predictores un incremento sobre el valor promedio centrado del peso y la edad contribuyen a un aumento sobre la predicción de la altura. En el caso del peso.centrado, por cada incremento de una unidad, predicción de la altura aumenta 1.4 cm la altura mientras que en la edad centrada por cada incremento de una unidad, la predicción de altura sube 2.3cm adicionales.
 
 c) Para el modelo resultante, haz gráficos que muestren la relación de la
 variable objetivo con los predictores. De igual forma, incorpora en la
@@ -201,19 +211,19 @@ al 89\% y 97\%, de tal forma que incorpores la incertidumbre que se ha
 cuantificado en tu gráfico.
 
 ```{r}
-g1<-menores_edad %>%
+g_1c_x1y<-menores_edad %>%
   ggplot(aes(x=peso.centrado,y=altura)) +
-  geom_point()
+  geom_point()+
+  geom_smooth(method = "lm")
 
-g2<-menores_edad %>%
+g_1c_x2y<-menores_edad %>%
   ggplot(aes(x=edad.centrado,y=altura)) +
-  geom_point()
+  geom_point()+
+  geom_smooth(method = "lm")
 
-
-
-g1+g2
+g_1c_x1y+g_1c_x2y
 ```
-
+Se aprecia una relación cercana a la lineal con ambos predictores.
 
 d) Supongamos que tenemos una amiga que es experta en
 [alometría](https://es.wikipedia.org/wiki/Alometr%C3%ADa) y les menciona que el
@@ -223,16 +233,80 @@ modelo del inciso a) y un modelo adicional que sólo incorpora el `peso`. ¿Cuá
 parece tener mejor capacidad predictiva?
 
 ```{r}
-#howell.centrado
-m_1d <- stan_glm(altura ~ log(peso), data = howell, seed=SEED, refresh = 0)
-#prior_summary(m_1a)
-summary(m_1d)
+howell<-howell %>%
+  mutate(log.peso = log(peso))
+head(howell)
+```
+Primero creamos la variable log.peso donde calculamos el logaritmo natural aplicado al peso sobre todas las observaciones de nuestra muestra.
+
+```{r}
+fit_1d_v1 <- stan_glm(altura ~ log.peso, data = howell, seed=SEED, refresh = 0)
+summary(fit_1d_v1)
 ```
 
+Después de calcular este primer modelo, observamos que el coeficiente del intercepto es negativo. Por ello, se decidió centrar la variable de log.peso alrededor de la media de log.peso para generar una interpretación del modelo.
+
+```{r}
+howell<-howell %>%
+  mutate(log.peso.centrado = log.peso-mean(log.peso))
+head(howell)
+```
+
+```{r}
+fit_1d <- stan_glm(altura ~ log.peso.centrado, data = howell, seed=SEED, refresh = 0)
+summary(fit_1d)
+```
+
+Ya que el signo del coeficiente es positivo nos quedaremos con esta versión para compararla con el del inciso a. Es decir, utilizamos los criterios de información de los modelos para medir la capacidad predictiva del modelo del inciso a) y d) medimos qué tan bien predice cada modelo en datos que no se han observado por medio de la devianza y haciendo uso de validación cruzada con los métodos de waic y loo.
+
+Primero calculamos la devianza de ambos modelos con waic:
+
+```{r}
+waic_1a<-waic(fit_1a) #calcula: elpd_waic que corresponde a la log-densidad; p_waic: el número efectivo de parámetros; waic: la devianza del modelo así como suss errores estándar variando sobre todas las observaciones
+waic_1d<-waic(fit_1d)
+
+comparativo_waic_1d<-cbind(waic_1a,waic_1d)
+comparativo_waic_1d
+```
+
+Y los resultados arrojan que el modelo es el d) que incorpora el peso en escala logarítmica como predictor tiene un mejor desempeño ya que es el de menor devianza 3,330 en contraste con el del inciso a) 3,982.
+
+Luego generamos un comparativo en términos de la log-densidad predictiva con el método loo_compare.
+
+```{r}
+comparativo_diff_waic_1d<-loo_compare(waic_1a,waic_1d) #calcula comparativo de diferencia en términos de la log-densidad predictiva y un error estándar sobre esta diferencia (se_diff). Ordenando los modelos del mejor al peor
+comparativo_diff_waic_1d
+```
+
+Estos resultados también identifican al modelo del inciso d como el mejor pues tiene una mayor log-densidad predictiva. Además se aprecia una diferencia relativamente grande en la log-densidad predictiva y el error estándar del modelo d con respecto al del inciso a.
+
+Por último comparamos los modelos con validación cruzada:
+
+```{r}
+loo_1a<-loo(fit_1a) #calcula: elpd_loo que corresponde a la log-densidad; p_loo: el número efectivo de parámetros; looic: la devianza del modelo así como suss errores estándar (SE) variando sobre todas las observaciones con validación cruzada
+loo_1a
+```
+
+```{r}
+loo_1d<-loo(fit_1d)
+loo_1d
+```
+En ambos casos, el diagnóstico que loo arroja es que podemos usar dicho criterio y además las estadísticas coinciden con las obtenidas con el método waic. Por lo que la conclusión no cambia, el mejor modelo también resulta ser el del inciso d bajo esta comparación.
+
+```{r}
+comparativo_diff_loo_1d<-loo_compare(loo_1a,loo_1d) #calcula comparativo de diferencia en términos de la log-densidad predictiva y un error estándar sobre esta diferencia (se_diff). Ordenando los modelos del mejor al peor
+comparativo_diff_loo_1d
+```
 
 e) ¿Cómo interpretas los coeficientes del mejor modelo del inciso `d`?
 
-INTERCEPTO NEGATIVO!
+Como ya mencionamos, el mejor modelo para la predicción de la variable altura fue el d: altura ~ log.peso.centrado, donde utilizamos la variable log(peso) fue centrada alrededor de su media. Primero mostramos los coeficientes de este modelo:
+
+```{r}
+print(fit_1d)
+```
+
+De lo anterior se interpreta al intercepto de 138.3 como la estimación para la altura promedio en centímetros de un individuo promedio con un log.peso promedio.centrado (log-kg). El valor del coeficiente $\beta_0$ para la log.peso.centrado de 47.1 significa que un incremento de una unidad en la variable log.peso.centrado aumenta 47.1 cm la predicción sobre la altura del individuo.
 
 f) Ahora estudiaremos el efecto de la distribución previa. Para esto
 consideraremos. La variable de `edad` centrada y probaremos distintos polinomios
@@ -240,12 +314,20 @@ como predictores. Consideraremos potencias desde 0 hasta términos de grado 6.
 Ajusta esta colección de posibles modelos. 
 
 ```{r}
-poly(edad.centrado,1,raw=TRUE)
-poly(edad.centrado,2,raw=TRUE)
-poly(edad.centrado,3,raw=TRUE)
-poly(edad.centrado,4,raw=TRUE)
-poly(edad.centrado,5,raw=TRUE)
-poly(edad.centrado,6,raw=TRUE)
+howell.centrado<-datos1 %>% 
+  mutate(edad.centrada = edad-mean(edad))
+howell.centrado$genero<-factor(howell$genero) #Convertimos la variable a factor
+head(howell.centrado)
+```
+
+```{r}
+fit_1f_g1 <- stan_glm(altura ~ edad.centrada, data = howell.centrado, seed=SEED, refresh = 0)
+summary(fit_1f_g1)
+```
+
+```{r}
+fit_1f_g2 <- stan_glm(altura ~ poly(edad.centrada,2,raw=TRUE), data = howell.centrado, seed=SEED, refresh = 0)
+summary(fit_1f_g2)
 ```
 
 
@@ -260,22 +342,18 @@ predicciones junto con las bandas de predicción.
 h) Realiza una evaluación de los modelos resultantes con el criterio de
 información que consideres más apropiado.
 
-Cuando utilizamos los criterios de información estamos midiendo su capacidad predictiva, qué tan bien predice el modelo en datos que no has observado: validación cruzada, WAIC (decir cómo le va al modelo para predecir en un futuro). Cuál es el mejor modelo (devianza)
-
 
 ```{r}
 
 ```
 
-
 i) Ahora ajustaremos un polinomio de grado 6 pero incorporaremos distribuciones
 previas mas restrictivas. Es decir, considera que $\beta_k \sim \mathsf{N}(0,
 \sqrt{5})$ para toda $k.$ Nota que la desviación estandar es $\sqrt{5}.$ Evalúa
-el criterio de información que utlizaste en el inciso anterior, y compara la
+el criterio de información que utilizaste en el inciso anterior, y compara la
 estimación de número efectivo de parámetros. ¿Por qué crees que sucede esto?
 
-compara la
-estimación de número efectivo de parámetros (cómo cambia)
+compara la estimación de número efectivo de parámetros (cómo cambia)
 
 ```{r}
 
